# is-frame-transformation

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  build.sh  conanfile.py  conanfile.txt  consume.py  deployment.yaml  main.cpp  options.json  options.proto  plot_frames.py
etc/conf/: options.json
etc/docker/: Dockerfile
etc/k8s/: deployment.yaml
examples/: consume.py
frame_conversion/: CMakeLists.txt  edge.hpp  frame_conversion.cpp  frame_conversion.hpp  frame_conversion.t.cpp
msgs/: CMakeLists.txt
service/: calibration_server.cpp  calibration_server.hpp  consumer_watcher.cpp  consumer_watcher.hpp  dependency_tracker.cpp  dependency_tracker.hpp  service.cpp  transformation_publisher.cpp  transformation_publisher.hpp  utils.cpp  utils.hpp
src/frame_conversion/: CMakeLists.txt  edge.cpp  frame_conversion.cpp  frame_conversion.hpp  frame_conversion.t.cpp
src/is/frame-conversion/: CMakeLists.txt  edge.cpp  frame-conversion.cpp  frame-conversion.hpp  frame-conversion.t.cpp
src/is/frame-conversion-service/: CMakeLists.txt  calibration-server.cpp  calibration-server.hpp  consumer-watcher.cpp  dependency-tracker.cpp  dependency-tracker.hpp  service.cpp  transformation-publisher.cpp  transformation-publisher.hpp
src/service/: CMakeLists.txt  calibration_server.cpp  consumer_watcher.cpp  consumer_watcher.hpp  dependency_tracker.cpp  dependency_tracker.hpp  service.cpp  transformation_publisher.cpp  transformation_publisher.hpp
